--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    //compileSdkVersion 23
+    //buildToolsVersion "23.0.3"
+
+
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 15
